<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="Sector:"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/spinner_sector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/sector"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="Region:"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/spinner_region"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/region"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="Skills:"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/skills"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/skills"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="Years Of experience:"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/experience"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/experience"/>

</LinearLayout>